--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,44 @@
 
     --background-color : #ffffff;
     --color-text : #002333;
+    --color-secundaria : #DEEFE7;
+    --color-tercearia : #159A9C;
+    --color-destaque : #B4BEC9;
 
 }
 
 * {
-    background-color: var(--color-text);
+    background-color: var(--color-tercearia);
     margin: 0;
     padding: 0;
+    
 }
 
 header {
 
-    width: 300px; /* Largura desejada para a div */
-    height: 200px; /* Altura desejada para a div */
+
+    width: 100%; /* Largura desejada para a div */
+    height: 80px; /* Altura desejada para a div */
     background-image: url('Media/logobanner1.png');
     background-size:contain;
     background-repeat: no-repeat; /* A imagem não será repetida */
-   
+    background-color: #ffffff;
+}
+main {
+    display: flexbox;
+    align-items: center;
+    text-align: center;
+}
+
+footer {
+    
+    width: 100%;
+    height: 80px;
+    background-color: var(--color-destaque);
+    align-items: center;
+    text-align: center;
 }
 
 .cabecalho {
 
-    height: 10%;
 }
